Closed Bug 211296 Opened 23 years ago Closed 23 years ago

[FIX]Setting attributes with non-null namespace on HTML elements broken

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.5alpha

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
.
Assignee: dom_bugs → bzbarsky
Priority: -- → P1
Summary: Setting attributes with non-null namespace on HTML elements broken → [FIX]Setting attributes with non-null namespace on HTML elements broken
Target Milestone: --- → mozilla1.5alpha
Attachment #126828 - Flags: superreview?(jst)
Attachment #126828 - Flags: review?(jst)
Comment on attachment 126828 [details] [diff] [review] patch Nice! :-) r+sr=jst
Attachment #126828 - Flags: superreview?(jst)
Attachment #126828 - Flags: superreview+
Attachment #126828 - Flags: review?(jst)
Attachment #126828 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: DOM: Core → DOM: Core & HTML
QA Contact: desale → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: