Make it possible to set attrs in a non-null namespace on (X)HTML elements.  Bug 211296, r+sr=jst